
- The VIA emulation is now cycle-exact.

- Autostart is now implemented and works as in the C64 emulator.

- Tape support has been added.

- Several PET models have been added.  Moreover, the model type can be
  changed at runtime, without leaving the emulator.

** 1541 changes
---------------

- The VIA emulation is now cycle-exact.

- Support for 40-track disk images has been added.

- Support for a new GCR-coded disk format has been added.

- It is now possible to completely disable the idle trap.

** Monitor changes
------------------

- The old monitor has been replaced by a completely new one, written
  by Daniel Sladic.  Although it is still under construction, it also
  now allows access to the CPU in the 1541 drive, and features
  watchpoints and breakpoints.

** Unix changes
---------------

- Sound and joystick should now be supported on NetBSD too (courtesy
  of Krister Walfridsson <cato@df.lth.se>).

- Support for multiple keyboard layouts has been added.  A
  "positional" layout for US keyboards is provided.

- The emulators and c1541 now use the real, full-featured GNU readline
  library if found.  Use `./configure --without-readline' for the old
  behavior.

- `-lICE' is now explicitly linked if found (the old way could cause
  troubles on GNU/Linux systems which have both GNU libc 2 and 1
  installed, such as RedHat 5.x).

- Serial and printer support has been added.

** MS-DOS changes
-----------------

- Support for two "hardware" joysticks has been added.

- The emulated drive LED has been moved to the CapsLock LED; the
  ScrollLock LED is turned on when "warp" (maximum speed) mode is
  enabled.

- The menu system has been made a bit more usable.  It is now possible
  to open a submenu directly from the emulator screen by pressing Alt
  + the corresponding hotkey.

- An Allegro-based sound driver has been implemented.

- The video driver now uses triple buffering for much smoother
  animations.
